@@ -56,6 +56,21 @@
 			margin: 0;
 			color: $gray-600;
 		}
+
+		// To be removed when @wordpress/components is upgraded to 17.0.0.
+		.components-visually-hidden {
+			border: 0;
+			clip: rect( 1px, 1px, 1px, 1px );
+			-webkit-clip-path: inset( 50% );
+			clip-path: inset( 50% );
+			height: 1px;
+			margin: -1px;
+			overflow: hidden;
+			padding: 0;
+			position: absolute;
+			width: 1px;
+			word-wrap: normal;
+		}
 	}
 }
 
