@@ -9,6 +9,7 @@
 * Fix - Track 'wcpay_payment_request_settings_change' for when updating the Payment Requests setting not being recorded.
 * Update - Fee breakdown when there's only a base fee
 * Fix - Inconsistent shipping options in Payment Request popup.
+* Fix - Payment methods checkbox UI looking off when Gutenberg is active.
 * Update - Remove unused "wcpay_deposits_summary_empty_state_click" track.
 * Fix - Applied sentence case on all strings.
 * Fix - Missing customer information after guest checkout via Checkout Block.
